<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Orkan</string>
    <string name="hello_world">Hello world!</string>
    <!-- 首页选项卡 -->
    <string name="tab_state">状态</string>
    <string name="tab_control">控制</string>
    <string name="tab_history">历史</string>
    <string name="tab_more">我的</string>
    <!-- 标题 -->
    <string name="title_login">登录</string>
    <string name="title_reg">注册</string>
    <string name="title_state">状态</string>
    <string name="title_history">历史数据</string>
    <string name="title_more">我的</string>
    <string name="title_timing">定时设置</string>
    <string name="title_bund">设备绑定</string>
    <string name="title_type">设备类型</string>
    <string name="title_devicelist">设备列表</string>
    <string name="account">手机号</string>
    <string name="password">密码</string>
    <string name="set_password">设置密码</string>
    <string name="phone_checknum">手机验证码</string>
    <string name="ri_reg">立即注册</string>
    <string name="outlogin">跳过登陆</string>
    <string name="get_checknum">获取</string>
    <string name="forget_num">忘记密码</string>
    <string name="get_pwd">找回密码</string>
    <string name="new_pwd">新密码</string>
    <string name="ok">确定</string>
    <string name="plzlogin">请登陆</string>
    <string name="indoor">室内</string>
    <string name="control_scree">光感息屏</string>
    <string name="outdoor">室外</string>
    <string name="state_pm">PM2.5浓度</string>
    <string name="state_temperature">温度</string>
    <string name="state_humidity">湿度</string>
    <string name="history_pm">PM2.5</string>
    <string name="history_temperature">温度</string>
    <string name="history_temperature_h">温度</string>
    <string name="history_humidity">湿度</string>
    <string name="history_start_time">开始时间</string>
    <string name="history_hour">小时</string>
    <string name="history_day">天</string>
    <string name="history_week">周</string>
    <string name="control_control">控制流程</string>
    <string name="control_fengstate">风机状态</string>
    <string name="control_automode">智能</string>
    <string name="control_timing">定时设置</string>
    <string name="control_timing_day">日期设置</string>
    <string name="control_filter_warning">请更换</string>
    <string name="control_inside_filter">内层滤芯</string>
    <string name="control_middle_filter">中层滤芯</string>
    <string name="control_outside_filter">外层滤芯</string>
    <string name="more_devicelist">设备列表</string>
    <string name="more_device">设备绑定</string>
    <string name="more_unbund">解除绑定</string>
    <string name="more_about">关于我们</string>
    <string name="more_help">帮助</string>
    <string name="more_quit">退出登录</string>
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="hiflying_smartlinker_ssid">SSID:</string>
    <string name="hiflying_smartlinker_password">密码:</string>
    <string name="hiflying_smartlinker_password_hint">请输入wifi密码</string>
    <string name="hiflying_smartlinker_start">开始</string>
    <string name="hiflying_smartlinker_connect_wifi">step1 : 连接WIFI: HF-LPT120</string>
    <string name="hiflying_smartlinker_connect_wifi_ok">我已经连接到HF-LPT120</string>
    <string name="hiflying_smartlinker_waiting">请稍后&#8230;</string>
    <string name="hiflying_smartlinker_timeout">配置超时!</string>
    <string name="hiflying_smartlinker_completed">SmartLink 完成</string>
    <string name="hiflying_smartlinker_new_module_found" formatted="false">发现新模块: Mac-%s Ip-%s</string>
    <string name="hiflying_smartlinker_no_wifi_connectivity">没有Wifi连接</string>
    <string name="hiflying_smartlinker_help">1.确保手机已连接wifi\n2.输入wifi密码\n3.短按检测控制器背后电源键,使wifi指示灯变为闪烁状态\n4.点击本界面开始按钮</string>
    <string name="hiflying_aplinker_help">1.确保室内WIFI已打开\n2.打开检测仪,使wifi指示灯变为红色状态\n3.手机连接检测控制器WIFI\n4.输入检测控制器需要连接的WIFI账号和密码\n5.点击本页面</string>
    <string name="hiflying_aplinker_step_1">1、确保检测控制器要连接的WIFI的已打开；\n2、打开检测控制器，短按一下背后开关键，约5秒钟后wifi指示灯变为红绿快闪；\n3、手机连接检测控制器wifi热点：HF-LPT120；\n4、点击页面“我已经连接到HF-LPT120”</string>
    <string name="hiflying_aplinker_insert_step_1">1、确保检测控制器要连接的WIFI的已打开；\n2、长按工作模式键（左起第二个按键）5秒，使wi-fi图标（右上角）变成闪烁状态；\n3、手机连接检测控制器wifi热点：HF-LPT120；\n4、点击页面“我已经连接到HF-LPT120”</string>
    <string name="hiflying_aplinker_step_2">1.输入检测控制器需要连接的WIFI账号和密码\n2.点击本页面“设备联网”</string>
    <string name="hiflying_aplinker_step_2_error">请检查检测控制器WIFI指示灯是否变亮</string>
    <string name="hiflying_aplinker_step_3">1.请确保手机已连接到互联网\n2.请确保检测控制器wifi指示灯是否为绿色。若为红色，请检查输入的wifi帐号和密码\n3.根据指示灯点颜色点击本页面按钮</string>
    <string name="hiflying_aplinker_insert_step_3">1.请确保手机已连接到互联网\n2.请确保检测控制器wifi图标是否为长亮。若为闪缩，请检查输入的wifi帐号和密码\n3.根据wifi图标点击本页面按钮</string>
    <string name="device_type_xiangfan">嵌墙式检测控制器</string>
    <string name="device_type_fenwen">桌面式检测控制器</string>
    <string name="device_xiangfan_introduce">空气检测,新风机控制,嵌墙安装</string>
    <string name="device_fenwen_introduce">空气检测,新风机控制,桌面摆放</string>

    <!-- Other -->
    <string name="device_no_search">未搜索到设备\n请确保手机和设备在同一wifi并重试</string>
    <string name="device_select">选择设备</string>
    <string name="band_success">设备绑定成功</string>
    <string name="band_fail">设备绑定失败</string>
    <string name="connect_wifi">请先连接wifi</string>
    <string name="connect_hf">请连接wifi： hf-lpt120</string>
    <string name="plz_connect_wifi_account">请输入WIFI账号</string>
    <string name="plz_connect_wifi_password">请输入WIFI密码</string>
    <string name="select_device">选择设备</string>
    <string name="plz_try">请重试</string>
    <string name="light_green">灯已变绿，绑定该设备</string>
    <string name="light_red">灯依然红色，重新操作一次</string>
    <string name="light_always_light">图标已经常亮，搜索已入网设备</string>
    <string name="light_evasive">图标一直闪缩，重新操作一遍</string>
    <string name="time_out">请求超时</string>
    <string name="on_line">在线</string>
    <string name="out_line">离线</string>
    <string name="re_login">该账号已在其他终端登录\n请重新登录</string>
    <string name="device_fail">获取设备列表失败</string>
    <string name="phone_null">手机号为空</string>
    <string name="send_success">发送成功</string>
    <string name="send_fail">发送失败\n请检查网络连接</string>
    <string name="input_null">输入为空</string>
    <string name="change_success">修改成功</string>
    <string name="change_fail">修改失败\n请检查网络连接</string>
    <string name="login_fail">登录失败\n请检查网络连接</string>
    <string name="device_out">检测到设备已离线</string>
    <string name="login_other_device">该账号已在其他终端登录\n请重新登录</string>
    <string name="not_connect_fan_device">未联动新风机\n请将新风机重新插电,然后点击确定</string>
    <string name="pair_success">新风机配对成功</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="setting_success">设置成功</string>
    <string name="close_mode">请先关闭智能模式</string>
    <string name="close_all_device">请先打开总开关</string>
    <string name="reset_1">真的要重置内层滤网时间么？</string>
    <string name="reset_2">真的要重置中层滤网时间么？</string>
    <string name="reset_3">真的要重置外层滤网时间么？</string>
    <string name="get_info_error">获取滤网信息失败</string>
    <string name="fengsu1">风速:一级</string>
    <string name="fengsu2">风速:二级</string>
    <string name="fengsu3">风速:三级</string>
    <string name="wl_t_01">设置无效，起始时间应早于终止时间</string>
    <string name="fr_c_01">智能模式</string>
    <string name="di_s_cancel">取消</string>
    <string name="di_q">退出Orkan</string>
    <string name="topic">标题</string>
    <string name="time">时间</string>
    <string name="timefor_alert">设置无效，起始时间应早于终止时间</string>
    <string name="fengsu">风速</string>
    <string name="yiji">一级</string>
    <string name="de_setting">删除设置</string>
    <string name="close_time">关闭定时</string>
    <string name="pmtipar_0">质量棒棒哒，继续保持~</string>
    <string name="pmtipar_1">质量还可以，继续加油~</string>
    <string name="pmtipar_2">轻度污染了，要努力哦~</string>
    <string name="pmtipar_3">中度污染了，需要净化～</string>
    <string name="pmtipar_4">重度污染了，急需净化～</string>
    <string name="pmtipar_5">严重污染了，急需净化～</string>
    <string name="pmgrad_0">优</string>
    <string name="pmgrad_1">良</string>
    <string name="pmgrad_2">中</string>
    <string name="pmgrad_3">差</string>
    <string name="pmgrad_4">重度</string>
    <string name="pmgrad_5">严重</string>
    <string name="get_user_fail">获取用户信息失败</string>
    <string name="time_slot">时间段</string>
    <string name="unbind_device">真的要解绑设备吗？</string>
    <string name="input_device_name">请输入设备名称</string>
    <string name="connect_fail">连接超时</string>
    <string name="change_name_fail">修改失败</string>
    <string name="unbind_success">设备解绑成功\n</string>
    <string name="unbind_fail">设备解绑失败\n</string>
    <string name="share_to">分享到</string>
    <string name="week_1">周一</string>
    <string name="week_2">周二</string>
    <string name="week_3">周三</string>
    <string name="week_4">周四</string>
    <string name="week_5">周五</string>
    <string name="week_6">周六</string>
    <string name="week_7">周天</string>
    <string name="week_8">周一到周五</string>
    <string name="week_9">每天</string>
    <string name="level_1">一级</string>
    <string name="level_2">二级</string>
    <string name="level_3">三级</string>
    <string name="select_wind_speed">选择风速</string>
    <string name="time_h"> 时 </string>
    <string name="time_m"> 分 </string>
	<string name="ap_add_dev">添加已有设备</string>
	<string name="ap_add_dev_old">旧版配网模式</string>
	<string name="ap_add_dev_new">新设备入网</string>
	<string name="bind_now">立即绑定</string>
	<string name="ap_step2_device">step2 : 设备联网</string>
	<string name="reg_ok">注册成功</string>
	<string name="reg_fail">注册失败\n请检查网络连接</string>
	
	

</resources>