<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/alert_btn_title"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:textSize="22sp"
		android:textStyle="normal|bold"
		android:layout_marginTop="10dp"
		android:text="@string/di_q"
		android:textColor="@color/theme_color"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        >
        <Button 
            android:id="@+id/reboot_cancel_alert_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:background="@color/theme_color"
            />
        <Button 
            android:id="@+id/reboot_confirm_alert_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
       		android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/di_s_cancel"
            android:textColor="@color/theme_color"
            android:background="@color/white"
            />
    </LinearLayout>


</LinearLayout>
