<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/llb"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/layout_base_title" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/button_ap_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_rect"
            android:text="@string/ap_add_dev_new"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/button_udp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_rect"
            android:text="@string/ap_add_dev"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_li_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:gravity="bottom|right"
         >

        <Button
            android:id="@+id/button_smartconfig"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_margin="5dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/login_rect"
            android:text="@string/ap_add_dev_old"
            android:textColor="@color/white"
            android:textSize="8sp" />
    </LinearLayout>

</LinearLayout>